--- a/public/style.css
+++ b/public/style.css
@@ -232,6 +232,10 @@ p {
 }
 
 /***** mockups *****/
+/* .communication__mockup {
+  lala
+} */
+
 .communication__mockup-wrapper {
   width: 100%;
   padding: 30px 30px 0 30px;
@@ -245,24 +249,9 @@ p {
   margin: 10px 0 6px 0;
 }
 
-.communication__mockup-wrapper.align-right {
-  align-items: flex-end;
-}
-
-.communication__mockup-wrapper.align-right .mockup-text {
-  text-align: right;
-}
-
 .communication__mockup-wrapper .mockup-img {
-  width: 80%;
-  height: 190px;
-  background-color: gray;
-}
-
-.communication__mockup-wrapper .mockup-img:nth-child(2) {
-  width: 80%;
-  height: 190px;
-  background-color: gray;
+  width: 100%;
+  height: auto;
 }
 
 /********** campaign **********/
@@ -367,7 +356,7 @@ p {
 
   .header__text {
     width: 30%;
-    margin: -250px 50px 0 0;
+    margin: -250px 20px 0 0;
   }
 
   .header__text p {
@@ -381,7 +370,7 @@ p {
 
   .info {
     width: 80%;
-    margin: 50px 0 30px 0;
+    margin: 80px 0 30px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -433,7 +422,7 @@ p {
 
   .poster-preview__wrapper {
     width: 42%; /*procent eller fasta pixlar?*/
-    height: auto; /*auto*/
+    height: auto;
     background-color: gray;
     margin: 0 20px;
   }
@@ -472,15 +461,19 @@ p {
     margin-top: 120px;
   }
 
+  .communication__mockup {
+    width: 80%;
+  }
+
   .communication__mockup-wrapper {
     width: 100%;
-    height: 400px;
     flex-direction: row;
+    align-items: center;
   }
 
   .communication__mockup-wrapper .mockup-img {
-    width: 50%;
-    height: 350px;
+    width: 100%;
+    height: auto;
   }
 
   .communication__mockup-wrapper .mockup-text {
@@ -489,13 +482,38 @@ p {
 
   .communication__mockup-wrapper .mockup-text h3 {
     margin: 20px 0 10px 0;
+    font-size: 24px;
+    margin: 20px 0;
   }
 
   .communication__mockup-wrapper.align-right {
     margin-top: 40px;
     flex-direction: row-reverse;
-    align-items: flex-start;
+    align-items: flex-end;
   }
+
+  .communication__mockup-wrapper.align-right .mockup-text {
+    text-align: right;
+  }
+
+  /*
+
+
+.communication__mockup-wrapper {
+  width: 100%;
+  padding: 30px 30px 0 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.communication__mockup-wrapper h3 {
+  font-size: 20px;
+  font-weight: 300;
+  margin: 10px 0 6px 0;
+}
+
+
+*/
 
   .campaign {
     width: 80%;
