--- a/public/style.css
+++ b/public/style.css
@@ -200,9 +200,10 @@ p {
   align-items: center;
 }
 
-.communication h1 {
+.communication__heading h1 {
   font-size: 26px;
   font-weight: 300;
+  margin: 30px 0;
 }
 
 /**** instagram *****/
@@ -245,7 +246,7 @@ p {
 
 .communication__mockup-wrapper h3 {
   font-size: 20px;
-  font-weight: 300;
+  font-weight: 400;
   margin: 10px 0 6px 0;
 }
 
@@ -441,6 +442,7 @@ p {
 
   .communication__heading h1 {
     font-size: 32px;
+    margin: 40px 0;
   }
 
   .communication__insta {
@@ -468,28 +470,28 @@ p {
   .communication__mockup-wrapper {
     width: 100%;
     flex-direction: row;
-    align-items: center;
   }
 
   .communication__mockup-wrapper .mockup-img {
     width: 100%;
     height: auto;
+    flex: 1.1;
   }
 
   .communication__mockup-wrapper .mockup-text {
     margin: 0 30px;
+    flex: 0.9;
   }
 
   .communication__mockup-wrapper .mockup-text h3 {
-    margin: 20px 0 10px 0;
+    margin: 0 0 10px 0;
     font-size: 24px;
-    margin: 20px 0;
   }
 
   .communication__mockup-wrapper.align-right {
     margin-top: 40px;
     flex-direction: row-reverse;
-    align-items: flex-end;
+    /* align-items: flex-end; */
   }
 
   .communication__mockup-wrapper.align-right .mockup-text {
