--- a/public/style.css
+++ b/public/style.css
@@ -233,10 +233,6 @@ p {
 }
 
 /***** mockups *****/
-/* .communication__mockup {
-  lala
-} */
-
 .communication__mockup-wrapper {
   width: 100%;
   padding: 30px 30px 0 30px;
@@ -383,6 +379,7 @@ p {
 
   .info p {
     font-size: 18px;
+    text-align: center;
   }
 
   .info a {
