--- a/public/style.css
+++ b/public/style.css
@@ -83,11 +83,37 @@ p {
   margin: 10% -15% 0 0;
 }
 
+/*
+.animate-pop-in {
+  animation: pop-in 1.2s ease-out forwards;
+}
+
+@keyframes pop-in {
+  0% {
+    opacity: 0;
+    transform: translateY(-40px) scale(1.3);
+  }
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.delay1 {
+  animation-delay: 0.4s;
+}
+
+.delay2 {
+  animation-delay: 0.8s;
+}
+*/
+
 .header__heading h1 {
   font-size: 50px;
   font-weight: 600;
   text-align: right;
   margin: 0;
+  /* opacity: 0; */
 }
 
 .header__text {
@@ -165,6 +191,7 @@ p {
   width: 80vw;
   height: auto;
   overflow: hidden;
+  box-shadow: 0 0 10px 1px #b2b2b2;
 }
 
 .poster-preview__wrapper:nth-child(2) {
@@ -230,6 +257,7 @@ p {
   height: auto;
   margin: 20px 0;
   overflow: hidden;
+  box-shadow: 0 0 10px 1px #b2b2b2;
 }
 
 /***** mockups *****/
@@ -249,6 +277,7 @@ p {
 .communication__mockup-wrapper .mockup-img {
   width: 100%;
   height: auto;
+  box-shadow: 0 0 10px 1px #b2b2b2;
 }
 
 /********** campaign **********/
